--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,28 @@
 services:
+  postgres:
+    image: postgres:13-alpine
+    restart: always
+    network_mode: host
+    environment:
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+    volumes:
+      - /var/lib/postgresql:/var/lib/postgresql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   marzban:
-    image: gozargah/marzban:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     env_file: .env
     network_mode: host
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
       - /var/lib/marzban:/var/lib/marzban
