--- a/.env.example
+++ b/.env.example
@@ -42,10 +42,9 @@ UVICORN_PORT = 8000
 # SUB_SUPPORT_URL = "https://t.me/support"
 # SUB_UPDATE_INTERVAL = "12"
 
-POSTGRES_DB="marzban"
-POSTGRES_USER="marzban"
-POSTGRES_PASSWORD="marzban"
-SQLALCHEMY_DATABASE_URL = "postgresql://marzban:marzban@postgres:5432/marzban"
+MYSQL_ROOT_PASSWORD="marzban"
+MYSQL_DATABASE="marzban"
+# SQLALCHEMY_DATABASE_URL = "postgresql://marzban:marzban@postgres:5432/marzban"
 
 ## Custom text for STATUS_TEXT variable
 # ACTIVE_STATUS_TEXT = "Active"
