--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
 services:
-  db:
-    image: mysql:latest
-    container_name: mysql-dev
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQL_DATABASE
-    network_mode: host
-    volumes:
-      - /var/lib/mysql:/var/lib/mysql
+  # db:
+  #   image: mysql:latest
+  #   container_name: mysql-dev
+  #   ports:
+  #     - "3306:3306"
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+  #     - MYSQL_DATABASE=$MYSQL_DATABASE
+  #   network_mode: host
+  #   volumes:
+  #     - /var/lib/mysql:/var/lib/mysql
   marzban:
     container_name: marzban-dev
     build:
       context: .
       dockerfile: Dockerfile
     restart: always
-    environment:
-      - SQLALCHEMY_DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@db:3306/${MYSQL_DATABASE}
+    # environment:
+    #   - SQLALCHEMY_DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@db:3306/${MYSQL_DATABASE}
     env_file: .env
     network_mode: host
     volumes:
